--- a/SimpleCalculator/SimpleCalculator.csproj
+++ b/SimpleCalculator/SimpleCalculator.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Addition.cs" />
+    <Compile Include="Expression.cs" />
     <Compile Include="Integer.cs" />
     <Compile Include="Modulus.cs" />
     <Compile Include="Multiplication.cs" />
