--- a/SimpleCalculator/SimpleCalculator.csproj
+++ b/SimpleCalculator/SimpleCalculator.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Addition.cs" />
-    <Compile Include="Integer.cs" />
+    <Compile Include="Division.cs" />
     <Compile Include="Modulus.cs" />
     <Compile Include="Multiplication.cs" />
     <Compile Include="Program.cs" />
