--- a/SimpleCalculator/SimpleCalculator.csproj
+++ b/SimpleCalculator/SimpleCalculator.csproj
@@ -43,15 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Addition.cs" />
-    <Compile Include="ConstantCreator.cs" />
-    <Compile Include="Expression.cs" />
-    <Compile Include="Division.cs" />
-    <Compile Include="Modulus.cs" />
-    <Compile Include="Multiplication.cs" />
+    <Compile Include="Storage\MathProblemStack.cs" />
+    <Compile Include="Operations\Addition.cs" />
+    <Compile Include="Storage\Constant.cs" />
+    <Compile Include="Storage\Expression.cs" />
+    <Compile Include="Operations\Division.cs" />
+    <Compile Include="Operations\Modulus.cs" />
+    <Compile Include="Operations\Multiplication.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Subtraction.cs" />
+    <Compile Include="Operations\Subtraction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
